--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,6 @@ dependencies {
     implementation group: 'net.serenity-bdd', name: 'serenity-cucumber', version: '1.9.45'
     implementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     implementation group: 'net.serenity-bdd', name: 'serenity-screenplay', version: '2.0.90'
-    testImplementation group: 'net.serenity-bdd', name: 'serenity-screenplay-rest', version: '2.0.90'
+    testCompile group: 'net.serenity-bdd', name: 'serenity-screenplay-rest', version: '2.0.90'
+    compile group: 'net.serenity-bdd', name: 'serenity-screenplay-rest', version: '2.0.90'
 }
